<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_HMI" Id="{9182483a-37b6-435a-bd34-df43c1568982}">
    <Declaration><![CDATA[TYPE ST_HMI :
STRUCT
	bStart	:	BOOL;  // N.O.
	bStop	:	BOOL;  // N.O.
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>